register platform param
